--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker:
   cached_network_image:
   flutter_local_notifications:
+  flutter_thermometer: ^1.0.0
+  flutter_animation_progress_bar:
 
 
 dev_dependencies:
