--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_local_notifications:
   flutter_thermometer: ^1.0.0
   flutter_animation_progress_bar:
+  wave_progress_widget: ^0.0.1
 
 
 dev_dependencies:
